Improve code readability and efficiency in user data handling process
Refactors UserService.java to use `var` for local variable type inference and updates Collectors.toList() to .toList().

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 48d37a9e-f2db-47e6-b506-4050d7998f28
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/5c663142-396c-4162-b66a-4f109913be33/f1aff1a0-e676-4288-844a-98794a0f935b.jpg